if(BUILD_SHARED_LIBS AND MSVC)
    add_definitions("-DPROLAND_API=__declspec(dllimport)")
else()
    add_definitions("-DPROLAND_API=")
endif(BUILD_SHARED_LIBS AND MSVC)

add_subdirectory(terrain1)
# add_subdirectory(terrain2)
# add_subdirectory(terrain3)
# add_subdirectory(terrain4)
# add_subdirectory(terrain5)
# add_subdirectory(preprocess)
# add_subdirectory(preprocess2)
